parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    SLCOMMENT
    WHITESPACE
    MLCOMMENT

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID EQUAL expression
Rule 2     expression -> expression ADD term
Rule 3     expression -> expression SUB term
Rule 4     expression -> term
Rule 5     term -> term MULT factor
Rule 6     term -> term DIV factor
Rule 7     term -> factor
Rule 8     factor -> OBRACKET expression CBRACKET
Rule 9     factor -> FLOAT_LITERAL
Rule 10    factor -> ID

Terminals, with rules where they appear

ADD                  : 2
CBRACKET             : 8
DIV                  : 6
EQUAL                : 1
FLOAT_LITERAL        : 9
ID                   : 1 10
MLCOMMENT            : 
MULT                 : 5
OBRACKET             : 8
SLCOMMENT            : 
SUB                  : 3
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 8
factor               : 5 6 7
statement            : 0
term                 : 2 3 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID EQUAL expression

    ID              shift and go to state 1

    statement                      shift and go to state 2

state 1

    (1) statement -> ID . EQUAL expression

    EQUAL           shift and go to state 3


state 2

    (0) S' -> statement .



state 3

    (1) statement -> ID EQUAL . expression
    (2) expression -> . expression ADD term
    (3) expression -> . expression SUB term
    (4) expression -> . term
    (5) term -> . term MULT factor
    (6) term -> . term DIV factor
    (7) term -> . factor
    (8) factor -> . OBRACKET expression CBRACKET
    (9) factor -> . FLOAT_LITERAL
    (10) factor -> . ID

    OBRACKET        shift and go to state 8
    FLOAT_LITERAL   shift and go to state 7
    ID              shift and go to state 5

    term                           shift and go to state 9
    factor                         shift and go to state 4
    expression                     shift and go to state 6

state 4

    (7) term -> factor .

    MULT            reduce using rule 7 (term -> factor .)
    DIV             reduce using rule 7 (term -> factor .)
    ADD             reduce using rule 7 (term -> factor .)
    SUB             reduce using rule 7 (term -> factor .)
    $end            reduce using rule 7 (term -> factor .)
    CBRACKET        reduce using rule 7 (term -> factor .)


state 5

    (10) factor -> ID .

    MULT            reduce using rule 10 (factor -> ID .)
    DIV             reduce using rule 10 (factor -> ID .)
    CBRACKET        reduce using rule 10 (factor -> ID .)
    ADD             reduce using rule 10 (factor -> ID .)
    SUB             reduce using rule 10 (factor -> ID .)
    $end            reduce using rule 10 (factor -> ID .)


state 6

    (1) statement -> ID EQUAL expression .
    (2) expression -> expression . ADD term
    (3) expression -> expression . SUB term

    $end            reduce using rule 1 (statement -> ID EQUAL expression .)
    ADD             shift and go to state 10
    SUB             shift and go to state 11


state 7

    (9) factor -> FLOAT_LITERAL .

    MULT            reduce using rule 9 (factor -> FLOAT_LITERAL .)
    DIV             reduce using rule 9 (factor -> FLOAT_LITERAL .)
    CBRACKET        reduce using rule 9 (factor -> FLOAT_LITERAL .)
    ADD             reduce using rule 9 (factor -> FLOAT_LITERAL .)
    SUB             reduce using rule 9 (factor -> FLOAT_LITERAL .)
    $end            reduce using rule 9 (factor -> FLOAT_LITERAL .)


state 8

    (8) factor -> OBRACKET . expression CBRACKET
    (2) expression -> . expression ADD term
    (3) expression -> . expression SUB term
    (4) expression -> . term
    (5) term -> . term MULT factor
    (6) term -> . term DIV factor
    (7) term -> . factor
    (8) factor -> . OBRACKET expression CBRACKET
    (9) factor -> . FLOAT_LITERAL
    (10) factor -> . ID

    OBRACKET        shift and go to state 8
    FLOAT_LITERAL   shift and go to state 7
    ID              shift and go to state 5

    term                           shift and go to state 9
    factor                         shift and go to state 4
    expression                     shift and go to state 12

state 9

    (4) expression -> term .
    (5) term -> term . MULT factor
    (6) term -> term . DIV factor

    ADD             reduce using rule 4 (expression -> term .)
    SUB             reduce using rule 4 (expression -> term .)
    $end            reduce using rule 4 (expression -> term .)
    CBRACKET        reduce using rule 4 (expression -> term .)
    MULT            shift and go to state 14
    DIV             shift and go to state 13


state 10

    (2) expression -> expression ADD . term
    (5) term -> . term MULT factor
    (6) term -> . term DIV factor
    (7) term -> . factor
    (8) factor -> . OBRACKET expression CBRACKET
    (9) factor -> . FLOAT_LITERAL
    (10) factor -> . ID

    OBRACKET        shift and go to state 8
    FLOAT_LITERAL   shift and go to state 7
    ID              shift and go to state 5

    term                           shift and go to state 15
    factor                         shift and go to state 4

state 11

    (3) expression -> expression SUB . term
    (5) term -> . term MULT factor
    (6) term -> . term DIV factor
    (7) term -> . factor
    (8) factor -> . OBRACKET expression CBRACKET
    (9) factor -> . FLOAT_LITERAL
    (10) factor -> . ID

    OBRACKET        shift and go to state 8
    FLOAT_LITERAL   shift and go to state 7
    ID              shift and go to state 5

    term                           shift and go to state 16
    factor                         shift and go to state 4

state 12

    (8) factor -> OBRACKET expression . CBRACKET
    (2) expression -> expression . ADD term
    (3) expression -> expression . SUB term

    CBRACKET        shift and go to state 17
    ADD             shift and go to state 10
    SUB             shift and go to state 11


state 13

    (6) term -> term DIV . factor
    (8) factor -> . OBRACKET expression CBRACKET
    (9) factor -> . FLOAT_LITERAL
    (10) factor -> . ID

    OBRACKET        shift and go to state 8
    FLOAT_LITERAL   shift and go to state 7
    ID              shift and go to state 5

    factor                         shift and go to state 18

state 14

    (5) term -> term MULT . factor
    (8) factor -> . OBRACKET expression CBRACKET
    (9) factor -> . FLOAT_LITERAL
    (10) factor -> . ID

    OBRACKET        shift and go to state 8
    FLOAT_LITERAL   shift and go to state 7
    ID              shift and go to state 5

    factor                         shift and go to state 19

state 15

    (2) expression -> expression ADD term .
    (5) term -> term . MULT factor
    (6) term -> term . DIV factor

    ADD             reduce using rule 2 (expression -> expression ADD term .)
    SUB             reduce using rule 2 (expression -> expression ADD term .)
    $end            reduce using rule 2 (expression -> expression ADD term .)
    CBRACKET        reduce using rule 2 (expression -> expression ADD term .)
    MULT            shift and go to state 14
    DIV             shift and go to state 13


state 16

    (3) expression -> expression SUB term .
    (5) term -> term . MULT factor
    (6) term -> term . DIV factor

    ADD             reduce using rule 3 (expression -> expression SUB term .)
    SUB             reduce using rule 3 (expression -> expression SUB term .)
    $end            reduce using rule 3 (expression -> expression SUB term .)
    CBRACKET        reduce using rule 3 (expression -> expression SUB term .)
    MULT            shift and go to state 14
    DIV             shift and go to state 13


state 17

    (8) factor -> OBRACKET expression CBRACKET .

    MULT            reduce using rule 8 (factor -> OBRACKET expression CBRACKET .)
    DIV             reduce using rule 8 (factor -> OBRACKET expression CBRACKET .)
    CBRACKET        reduce using rule 8 (factor -> OBRACKET expression CBRACKET .)
    ADD             reduce using rule 8 (factor -> OBRACKET expression CBRACKET .)
    SUB             reduce using rule 8 (factor -> OBRACKET expression CBRACKET .)
    $end            reduce using rule 8 (factor -> OBRACKET expression CBRACKET .)


state 18

    (6) term -> term DIV factor .

    MULT            reduce using rule 6 (term -> term DIV factor .)
    DIV             reduce using rule 6 (term -> term DIV factor .)
    ADD             reduce using rule 6 (term -> term DIV factor .)
    SUB             reduce using rule 6 (term -> term DIV factor .)
    $end            reduce using rule 6 (term -> term DIV factor .)
    CBRACKET        reduce using rule 6 (term -> term DIV factor .)


state 19

    (5) term -> term MULT factor .

    MULT            reduce using rule 5 (term -> term MULT factor .)
    DIV             reduce using rule 5 (term -> term MULT factor .)
    ADD             reduce using rule 5 (term -> term MULT factor .)
    SUB             reduce using rule 5 (term -> term MULT factor .)
    $end            reduce using rule 5 (term -> term MULT factor .)
    CBRACKET        reduce using rule 5 (term -> term MULT factor .)

